# Benchmark

./: CustomDLFTFriction.py  CustomDLFTUniGap.py  DLFT_TC_01.ipynb  DLFT_TC_03.ipynb  DLFT_TC_04.ipynb  HelperFunctions.py  README.md  WR_Template.ipynb  pyproject.toml
TC_01/: linear_FRF_sol.csv  linear_edf.csv  nonlinear_FRF_sol.csv  nonlinear_edf.csv
TC_03/: linear_FRF_sol.csv  linear_edf.csv  nonlinear_FRF_sol.csv  nonlinear_edf.csv
